// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`gux-form-field-color #render should render component as expected when an optional "error" slot is provided 1`] = `
<gux-form-field-color>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error gux-show">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i" aria-invalid="true" aria-describedby="gux-form-field-error-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <span slot="error" id="gux-form-field-error-i">
    This is an error message
  </span>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when an optional "help" slot is provided 1`] = `
<gux-form-field-color>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i" aria-describedby="gux-form-field-help-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <span slot="help" id="gux-form-field-help-i">
    This is a help message
  </span>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when an optional "label-info" slot is provided 1`] = `
<gux-form-field-color>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i" aria-describedby="gux-label-info-beta-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
  <gux-label-info-beta slot="label-info" id="gux-label-info-beta-i">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when indicator-mark is "optional" 1`] = `
<gux-form-field-color indicator-mark="optional">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="optional">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when indicator-mark is "required" 1`] = `
<gux-form-field-color indicator-mark="required">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when input attribute is "disabled" 1`] = `
<gux-form-field-color>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container gux-disabled">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" disabled="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when input attribute is "required" 1`] = `
<gux-form-field-color>
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above gux-required">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required" required="">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" required="" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when label-position is above 1`] = `
<gux-form-field-color label-position="above">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-above">
      <div class="gux-form-field-label gux-above">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when label-position is beside 1`] = `
<gux-form-field-color label-position="beside">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-beside">
      <div class="gux-form-field-label gux-beside">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-color>
`;

exports[`gux-form-field-color #render should render component as expected when label-position is screenreader 1`] = `
<gux-form-field-color label-position="screenreader">
  <template shadowrootmode="open">
    <div class="gux-form-field-container gux-screenreader">
      <div class="gux-form-field-label gux-screenreader">
        <slot name="label">
        </slot>
        <gux-form-field-label-indicator variant="required">
        </gux-form-field-label-indicator>
        <slot name="label-info">
        </slot>
      </div>
      <div class="gux-input-and-error-container">
        <div class="gux-input">
          <div class="gux-input-container">
            <slot name="input">
            </slot>
          </div>
        </div>
        <div role="alert" class="gux-form-field-error">
          <gux-icon icon-name="fa/hexagon-exclamation-solid" decorative="" size="small">
          </gux-icon>
          <div class="gux-message">
            <slot name="error">
            </slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help">
            </slot>
          </div>
        </div>
      </div>
    </div>
  </template>
  <input slot="input" type="color" value="#cc3ebe" id="gux-form-field-input-i">
  <label slot="label" for="gux-form-field-input-i">
    Label
  </label>
</gux-form-field-color>
`;
